# SmartCRM

./: .dockerignore  .editorconfig  .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  settings.json  vercel.json
backend/: Dockerfile
backend/app/: config.py  database.py  main.py  utils.py
backend/app/etl/: explore.py  load.py  load_with_schema.py  transform.py
backend/app/models/: __init__.py  customer.py  order.py  order_item.py  order_payment.py  order_review.py  product.py  seller.py
backend/app/routers/: analytics.py
backend/tests/: conftest.py  test_analytics.py
docs/: deploy-production.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: dashboardApi.js
frontend/src/charts/: registerCharts.js
frontend/src/components/: AboutPanel.jsx  AlertsBanner.jsx  ChartCard.jsx  DataStates.jsx  DateFilter.jsx  FunnelChart.jsx  FunnelDonutChart.jsx  FunnelTrendLineChart.jsx  InsightBox.jsx  KpiSparkline.jsx  LoginPage.jsx  MetricCard.jsx  OperationsPanel.jsx  PaymentChannelsList.jsx  PaymentPieChart.jsx  PaymentRevenueBarChart.jsx  ReportsPanel.jsx  RevenueChart.jsx  Sidebar.jsx  Skeletons.jsx  ThemeToggle.jsx  TopCategoriesBarChart.jsx  TopProductsTable.jsx  TopSellersTable.jsx  Topbar.jsx
frontend/src/constants/: chart.js
frontend/src/hooks/: useDashboardData.js  useTheme.js
frontend/src/utils/: chartData.js  dateRanges.js  formatters.js  insights.js
