[project]
name = "smartcrm"
version = "0.1.0"
description = "Customer & Sales Insights CRM"
requires-python = ">=3.13"

# RUFF — linter + formatter
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

# organiza imports corretamente
[tool.ruff.lint.isort]
known-first-party = ["app"]

# FORMATAÇÃO (Ruff format)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# PYTEST
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q --disable-warnings --maxfail=1"
